--- a/_posts/acl/2012-10-22-ol-acl-ch2-cn.md
+++ b/_posts/acl/2012-10-22-ol-acl-ch2-cn.md
@@ -54,7 +54,7 @@ tags : [acl]
 也就是说，+可以有任意多的参数。你可以自己试试没有任何参数的+表达式。  
 
 
-如果需要嵌套+-*/，只需要空格分开，括号匹配就可以。  
+如果需要嵌套\+\-\*\/，只需要空格分开，括号匹配就可以。  
 
 
     (+ (/ 4 2)
