--- a/_posts/acl/2012-10-24-ol-acl-ch4-cn.md
+++ b/_posts/acl/2012-10-24-ol-acl-ch4-cn.md
@@ -24,7 +24,7 @@ make-array可以构造数组，参数是数组的维度。
 	CL-USER> 
 
 
-:initial-element是命名参数，当然是可选的。良好的习惯是，变量要初始化。当然数组也是。  
+\:initial-element是命名参数，当然是可选的。良好的习惯是，变量要初始化。当然数组也是。  
 
 
 aref可以获取数组的某元素，索引从0开始。  
@@ -484,11 +484,11 @@ point-x, point-y还可以和setf一起使用
 	  (format stream "#<~A ~A>" (px p) (py p)))
 	
 
-:conc-name是代替默认的point-，这样下面使用的就是(px p)，而不再是(point-x p)。
+\:conc-name是代替默认的point-，这样下面使用的就是(px p)，而不再是(point-x p)。
 不过不建议这样做，因为会降低代码的可阅读性，易引起混淆。  
 
 
-:print-function是当point结构体实例输出时，调用的函数。
+\:print-function是当point结构体实例输出时，调用的函数。
 第一个参数就是实例，第二个，第三个参数可以认为是固定那样写的。  
 
 
