--- a/_posts/acl/2012-10-31-ol-acl-ch11-cn.md
+++ b/_posts/acl/2012-10-31-ol-acl-ch11-cn.md
@@ -70,7 +70,7 @@ defclass的第三个参数是成员列表。
 可以只写出成员名，也可以指定相关的属性。  
 
 
-:accessor代替默认的slot-value，定义相应的方法名。  
+\:accessor代替默认的slot-value，定义相应的方法名。  
 
 	
 	(defclass circle ()
@@ -110,7 +110,7 @@ defclass的第三个参数是成员列表。
 	CL-USER>
 
 
-:initarg必须放在:initform的前面，如果有的话。
+\:initarg必须放在:initform的前面，如果有的话。
 
 
 类的静态成员通过属性参数:allocation :class来声明。  
