--- a/_posts/acl/2012-11-01-ol-acl-ch12-cn.md
+++ b/_posts/acl/2012-11-01-ol-acl-ch12-cn.md
@@ -260,13 +260,13 @@ mapcan可以用于返回一层节点。假设children返回某元素的子节点
 	CL-USER> (setf *bst* (bst-delete 2 *bst* #'<))
 	
 	#S(NODE
-	   :L
+	   \:L
 	   #S(NODE :L #S(NODE :L NIL :ELT 1 :R NIL) :ELT 4
-	      :R #S(NODE :L NIL :ELT 4 :R #S(NODE :L NIL :ELT 5 :R NIL)))
-	   :ELT 7
-	   :R
+	      \:R #S(NODE :L NIL :ELT 4 :R #S(NODE :L NIL :ELT 5 :R NIL)))
+	   \:ELT 7
+	   \:R
 	   #S(NODE :L #S(NODE :L NIL :ELT 8 :R NIL) :ELT 9
-	      :R #S(NODE :L NIL :ELT 12 :R NIL)))
+	      \:R #S(NODE :L NIL :ELT 12 :R NIL)))
 	CL-USER> (bst-find 2 *bst* #'<)
 	NIL
 	CL-USER> 
